--- a/data_setup/data_setup.ipynb
+++ b/data_setup/data_setup.ipynb
@@ -2597,17 +2597,17 @@
     {
      "data": {
       "text/plain": [
-       "Los Angeles         18694\n",
-       "Sacramento           9674\n",
-       "San Diego            7570\n",
-       "San Jose             5840\n",
-       "Oakland              4157\n",
-       "                    ...  \n",
-       "Junction City           1\n",
-       "Fall River Mills        1\n",
-       "Taylorsville            1\n",
-       "Whitethorn              1\n",
-       "Playa del Rey           1\n",
+       "Los Angeles       18694\n",
+       "Sacramento         9674\n",
+       "San Diego          7570\n",
+       "San Jose           5840\n",
+       "Oakland            4157\n",
+       "                  ...  \n",
+       "Kensington            1\n",
+       "Crescent Mills        1\n",
+       "Somes Bar             1\n",
+       "Igo                   1\n",
+       "Scotia                1\n",
        "Name: City, Length: 1023, dtype: int64"
       ]
      },
@@ -3419,20 +3419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "Full_data = full_data.to_csv(index=False)\n",
     "compression_opts = dict(method='zip',\n",
     "                        archive_name='full_data.csv')  \n",
-    "df.to_csv('full_data.zip', index=False,\n",
+    "full_data.to_csv('full_data.zip', index=False,\n",
     "          compression=compression_opts)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
